# lair

./: Cargo.toml  README.md
benches/: bench_main.rs  layered_model.rs  linear_model.rs
benches/conv2d/: conv2d.rs  mod.rs
benches/linear/: layered_model.rs  linear_model.rs  mod.rs
notes/: 2021-01-30.md  2021-02-07.md  2021-03-11.md  index.md
src/: layered_model.rs  layered_model_test.rs  lib.rs  linear_model.rs  linear_model_test.rs  logit.rs  logit_test.rs  model.rs  model_test.rs  relu.rs  relu_test.rs  trainer.rs  trainer_test.rs
src/img/: conv2d.rs  conv2d_test.rs  img.rs  img_test.rs  mod.rs
