[package]
name = "lair"
version = "0.1.0"
authors = ["Jonathan Bredin <bredin@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23"
rand = "0.6.5"

[dev_dependencies]
assert_approx_eq = "1.1"
criterion = "0.3"

[[bench]]
name = "layered_model"
harness = false

[[bench]]
name = "linear_model"
harness = false
