[package]
name = "lair"
version = "0.1.0"
authors = ["Jonathan Bredin <bredin@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
log = "0.4.14"
nalgebra = "0.23"
rand = "0.6.5"

[dev_dependencies]
assert_approx_eq = "1.1"
criterion = "0.3"
ctor = "0.1.18"

[[bench]]
name = "layered_model"
harness = false

[[bench]]
name = "linear_model"
harness = false
