[package]
name = "lair"
version = "0.1.0"
authors = ["Jonathan Bredin <bredin@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
image = "0.23.13"
log = "0.4.14"
nalgebra = "0.24.1"
rand = "0.6.5"
structopt = "0.3.21"
typenum = "1.12.0"

[dev_dependencies]
assert_approx_eq = "1.1"
cargo-criterion = "1.0.1"
criterion = "0.3.4"
ctor = "0.1.18"

[[bench]]
name = "bench_main"
harness = false
html_reports = []

[profile.bench]
debug = true
